p7/tests/t078.err
Semantic error on line 6: A string expression is not a legal array index.  The array is 'nums'.
