p7/tests/t078.gpl
string str = "index";
int nums[4];

on akey
{
    nums[str] = 42;
}
